--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "koa": "^2.12.0",
+    "koa-body": "^4.1.3",
     "koa-router": "^9.0.1",
     "koa2-cors": "^2.0.6",
     "request": "^2.88.2",
